Horizontal scroll bug fixed && Dropdown menu nav

--- a/Frontend-ECS/src/App.css
+++ b/Frontend-ECS/src/App.css
@@ -1,5 +1,6 @@
 :root{
-overflow-x: hidden;
+overflow: hidden;
+width: 100vw;
 }
 
 
